# grendtrek-core

./: .env  Cargo.toml  collation-translation.json  queries-config.json  translation-types.json
external_references/: IS_THE_GRASS_GREENER_ASKMARK.md  THE_NEXT.md  cache-management-notes.txt  cargo-dependencies  collation_translation.txt  dev_notes.txt  original_queries.txt  translations.txt
src/: main.rs
src/internals/: mod.rs
src/internals/connections/: connector.rs
src/internals/data_structures/: data_struct.rs  database_connector_spec.rs  db_reg.rs  mod.rs
src/internals/data_structures/database_metadata/: column_data.rs  constraint_metadata.rs  constraint_types.rs  db_metadata.rs  identity_metadata.rs  mod.rs  table_data.rs  table_metadata.rs
src/internals/data_structures/database_types/: collation.rs  mod.rs  query.rs  types.rs
src/internals/db_actions/: pg_actions.rs  sql_server_actions.rs
src/internals/translator/: mod.rs  sql_server_to_pg.rs
src/internals/translator/sql_server_to_pg/: ddl_translation.rs  mod.rs  query_builder.rs
src/outer/: mod.rs
src/outer/databases/: mod.rs
src/outer/databases/connections/: connector.rs
src/outer/databases/db_actions/: mod.rs  pg_actions.rs  sql_server_actions.rs  sql_server_databuffer.rs
