[package]
name = "grendtrek-core"
version = "0.1.0"
edition = "2024"

[dependencies]
dotenvy = "0.15.7"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tiberius = "0.12.3"
tokio = { version = "1.49.0", features = ["full"] }
tokio-postgres = "0.7.16"
tokio-util = { version = "0.7.18", features = ["full"] }
